# MonitorMaestro

./: Cargo.toml  README.md  workspaces_example.json  workspaces_example.toml
src/: cli.rs  main.rs  tests.rs  tui.rs  workspaces.rs
src/app/: mod.rs  tui.rs
